# rt_ddsp

./: .editorconfig  .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  requirements.sh  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.dvc/: config
.github/: ISSUE_TEMPLATE.md
.github/workflows/: python-app.yml
data/: .gitignore  violin.dvc
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  modules.rst  rt_ddsp.rst  usage.rst
notebooks/: Dataset.ipynb  Decoder.ipynb  Encoder.ipynb  F0Encoder.ipynb  FilteredNoise Synthesizer Testing.ipynb  Harmonic Synthesizer Testing.ipynb  Initial Model Exploration and Testing.ipynb  OscillatorBank.ipynb  Remake.ipynb  Sketchbook.ipynb
rt_ddsp/: cli.py  core.py  effects.py  losses.py  processors.py  spectral_ops.py  synths.py
src/: fftconv.py
src/rt_ddsp/: core.py  effects.py  losses.py  synths.py  types.py
src/zak/: __init__.py  dataset.py  loss.py  serialize.py  synth.py  train.py
src/zak/ddsp/: __init__.py  effects.py  synths.py
src/zak/model/: __init__.py  controller.py  decoder.py  encoder.py
tests/: __init__.py  test_core.py  test_effects.py  test_processors.py  test_spectral_ops.py  test_synths.py
utils/: md_preprocess.py
