[metadata]
name = rt_ddsp
description = Realtime DDSP implementation in PyTorch
author = Sahin Kureta
author_email = skureta@gmail.com
license = GNU General Public License v3
platforms = linux
url = https://github.com/kureta/rt_ddsp
version = 0.1.0
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English',
    Programming Language :: Python :: 3.9
keywords = ddsp, pytorch, jack

[options]
packages =
    rt_ddsp
install_requires =
    wheel
    torch
    torchvision
    torchaudio
    pytorch-lightning
    JACK-Client
    librosa
    numpy
    scipy
    python-osc
    SoundFile
    torchcrepe
python_requires = >=3.9
package_dir =
    =src
include_package_data = yes
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    hypothesis>=6.23.1

[options.entry_points]
console_scripts =
    rt_ddsp = rt_ddsp.cli:main

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:rt_ddsp/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
max-line-length = 96

[tool:pytest]
addopts = --ignore=setup.py --hypothesis-show-statistics
filterwarnings = ignore::DeprecationWarning:librosa.*

[mypy]
ignore_missing_imports = False
disallow_untyped_defs = True

[mypy-scipy]
ignore_missing_imports = True

[mypy-librosa]
ignore_missing_imports = True
